<resources>
    <string name="app_name">Test_app_project</string>
    <string name="field1">Valor1</string>
    <string name="field2">Valor2</string>
    <string name="button">Dale</string>
    <string name="finale">Valor</string>
    <string name="valid">Validacion</string>
    <string name="description">next</string>
    <string name="dosactivity">Wolaaaaa ha funionado</string>
    <string name="patras">pa tras</string>
    <string name="puntitos1">opcion juan</string>
    <string name="puntitos2">opcion chu</string>
    <string name="search">search</string>
    <string name="query_view">view the query</string>
    <string name="insert">insert into the query</string>
    <string name="valor">valor</string>
    <string name="delete">delete</string>
    <string name="random_date">Set random date</string>
</resources>