<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorPrimary_light"
    android:onClick="vaciar"
    tools:context=".BdTestActivity">

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="113dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="159dp"
        android:layout_marginLeft="159dp"
        android:layout_marginEnd="139dp"
        android:layout_marginRight="139dp"
        android:layout_marginBottom="92dp"
        android:contentDescription="@string/patras"
        android:onClick="volver"
        app:srcCompat="@mipmap/circled_chevron_right" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="193dp"
        android:layout_above="@+id/imageButton3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:layout_marginBottom="365dp"
        android:contentDescription="@string/query_view"
        android:gravity="center_horizontal"
        android:text="@string/query_view"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="311dp"
        android:onClick="mostrar"
        android:text="@string/button" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:layout_marginBottom="82dp"
        android:onClick="insertar"
        android:text="@string/insert" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="98dp"
        android:layout_height="47dp"
        android:layout_above="@+id/button4"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="80dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="center|center_horizontal"
        android:hint="@string/valor"
        android:inputType="number"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="104dp"
        android:layout_height="46dp"
        android:layout_above="@+id/button4"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginBottom="78dp"
        android:layout_toStartOf="@+id/editTextTextPersonName"
        android:layout_toLeftOf="@+id/editTextTextPersonName"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="center|center_horizontal"
        android:hint="@string/field2"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="94dp"
        android:layout_height="45dp"
        android:layout_above="@+id/button4"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="82dp"
        android:layout_toStartOf="@+id/editTextTextPersonName2"
        android:layout_toLeftOf="@+id/editTextTextPersonName2"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/field1"
        android:inputType="number"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:layout_marginBottom="19dp"
        android:onClick="vaciar"
        android:text="@string/delete"
        app:backgroundTint="@color/icons" />

</RelativeLayout>